Fix margin issues on small screen

--- a/assets/styles/styles-sm-md.css
+++ b/assets/styles/styles-sm-md.css
@@ -24,7 +24,7 @@
     
     .content {
         gap: 2.5vw;
-        margin: 0px 6vw;
+        margin: 0px 5vw;
         max-width: 32vw;
     }
     
