--- a/assets/styles/styles-xs.css
+++ b/assets/styles/styles-xs.css
@@ -14,7 +14,6 @@
 
     p {
         line-height: 6vw;
-        font-weight: 300;
         font-size: 3.75vw;
     }    
     /** CONTAINER **/
@@ -23,7 +22,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 50px;
+        gap: 10vw;
     
         border-radius: 7.5px;
         margin: 30px;
@@ -34,7 +33,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        gap: 30px;
+        gap: 7vw;
         max-width: 350px;
     
         margin: 0 10vw;
@@ -55,7 +54,7 @@
     }
     
     .label-stats {
-        font-size: 12px;
+        font-size: 2.5vw;
         letter-spacing: 2px;
     }
     
